--- a/wp-content/themes/upcreative/css/popup.css
+++ b/wp-content/themes/upcreative/css/popup.css
@@ -5,6 +5,14 @@
 	color:#fff;
 }
 
+.popup h1 {
+    margin-top: 0 ! important;
+    color: white ! important;
+    font-family: Sakkal Majalla ! important;
+    padding-bottom: 5px ! important;
+    font-size: 53px ! important;
+}
+
 input[type=text] .control{ border:none;}
 .control {
 	padding-top:15px;
@@ -14,6 +22,30 @@ input[type=text] .control{ border:none;}
     margin-bottom: 10px;
 	border:none;
 }
+
+
+.input-name{ 
+background:url(../img/user.png) no-repeat #FFF;
+background-size:20px;
+background-position: 5px 14px;
+}
+.input-mail{ 
+background:url(../img/email.png) no-repeat #FFF;
+background-size:20px;
+background-position: 5px 14px;
+}
+.input-phone{ 
+background:url(../img/phone-call.png) no-repeat #FFF;
+background-size:20px;
+background-position: 5px 14px;
+}
+.input-message{ 
+background:url(../img/chat.png) no-repeat #FFF;
+background-size:20px;
+background-position: 5px 14px;
+}
+
+
 
 .control-text {
 	padding-top:15px;
@@ -48,15 +80,29 @@ input[type=text] .control{ border:none;}
 }
 
 .popup {
-    margin: 150px auto;
-    padding: 50px ! important;
+    margin: 160px auto;
+    padding: 35px ! important;
     border-radius: 5px;
     width: 185%;
-    position: relative;
     transition: all 1s ease-in-out;
     background-image: url('../img/popup.png') ;
     background-position: -265px -30px;
     margin-left: -40%;
+	overflow:hidden;
+	position:fixed ! important;
+
+}
+.popup .close {
+    position: absolute;
+    background: url(../img/cross.png) no-repeat;
+    width: 37px;
+    top: 12px;
+    right: 75px;
+    transition: all 200ms;
+    font-size: 50px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #000!important;
 }
 
 .centerpopup {
@@ -127,6 +173,7 @@ ul.social-network li a:hover span .fa-circle {
 .social ul li {
 	float:left;
 	padding-right:160px;
+	list-style:none;
 }
 
  .social img {
