--- a/wp-content/themes/upcreative/css/main.css
+++ b/wp-content/themes/upcreative/css/main.css
@@ -963,7 +963,12 @@ img.zoomEffect:hover {
 }
 
 .upcreative {
-    padding-top: 99vh;
+	top: 50%;
+    -webkit-transform: translateY(-50%);
+       -moz-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+         -o-transform: translateY(-50%);
+            transform: translateY(-50%);
     /* poussé de la moitié de hauteur de viewport */
     transform: translateY(-50%);
     /* tiré de la moitié de sa propre hauteur */
