--- a/wp-content/themes/upcreative/css/popup.css
+++ b/wp-content/themes/upcreative/css/popup.css
@@ -102,14 +102,21 @@ background-position: 48% 30%;
 .btn-sender{
 background-color:black;
 color:white;
-padding: 10px 47px 10px 45px;
+padding: 10px 47px 10px 47px;
 border: none;	
 }
 .form-control {
     height: 45px ! important;
   
 }
+/* responsive start */
 @media screen and (max-width:359px) {
+	#social {
+    width: 36px;
+    margin-bottom: 15px;
+    margin-left: 13px;
+}
+
 .modal-title {
     font-size: 35px ! important;
 	margin-top:50% ! important;
@@ -123,7 +130,9 @@ border: none;
 
 }
 .btn-sender {
-    padding: 10px 52px 10px 52px ! important;
+margin-left: 15px;
+padding: 10px 50px 10px 50px !important;
+width: 140px;
 }
 .form-control {
     height: 50px !important;
@@ -146,6 +155,11 @@ border: none;
 }
 }
 @media screen and (min-width:360px) and (max-width:365px) {
+		#social {
+    width: 36px;
+    margin-bottom: 15px;
+    margin-left: 13px;
+}
 .modal-title {
 	font-size: 29px ! important;
 	margin-top: 85px !important;
@@ -161,10 +175,111 @@ border: none;
 
 }
 .btn-sender {
-    padding: 10px 63px 10px 63px ! important;
+margin-left: 12px;
+padding: 10px 65px 10px 65px !important;
 } 
 .modal-content {
 
     background-position: 50% !important;
 }
 }
+
+@media screen and (min-width:370px) and (max-width:400px) {
+.modal-title {
+	font-size: 29px ! important;
+	margin-top: 85px !important;
+	line-height: 0 ! important;
+	margin-bottom: 25px ! important;
+	text-align: center ! important;
+ 
+}
+
+.modal-title2 {
+    font-size:22px ! important;
+	text-align:center ! important;
+
+}
+.btn-sender {
+    padding: 10px 70px 10px 70px !important;
+    margin-left: -73px;
+    float: none !important;
+    margin-left: 15px;
+ 
+}
+.modal-content {
+
+    background-position: 50% !important;
+}
+}
+@media screen and (min-width:401px) and (max-width:550px) {
+.btn-sender {
+	margin-left: 15%;
+    padding: 10px 50px 10px 50px !important;
+    width: 194px;
+}
+.modal-title {
+    font-size: 59px ! important; 
+    line-height: 43px ! important;
+    margin-top: 58px ! important;
+    text-align: center ! important;
+}
+.modal-title2 {
+    font-family: Sakkal Majalla;
+    font-size: 40px;
+    color: white;
+    text-align: center;
+}
+.modal-body {
+    margin-bottom: 0;
+    border-bottom: none ! important;
+}	
+.modal-content {
+    background-position: 48% 24% ! important;
+}
+}
+@media screen and (min-width:600px) and (max-width:700px) {
+.btn-sender {
+    margin-left: 62%;
+    padding: 10px 50px 10px 50px !important;
+    width: 140px;
+}
+.modal-body {
+    margin-bottom: 24px !important;
+    border-bottom: none !important;
+}
+}
+@media screen and (min-width:800px) and (max-width:1000px) {
+.btn-sender {
+    margin-left: 39%;
+    padding: 10px 50px 10px 50px !important;
+    width: 140px;
+}
+.modal-body {
+    margin-bottom:8px !important;
+    border-bottom: none !important;
+}
+
+}
+@media screen and (min-width:1000px) and (max-width:1300px) {
+	.btn-sender {
+    margin-left: -38px;
+    padding: 10px 50px 10px 50px !important;
+    width: 140px;
+}
+.modal-body {
+    margin-bottom: 24px !important;
+    border-bottom: none !important;
+}
+}
+@media screen and (min-width:1350px) and (max-width:1445px) {
+	.btn-sender {
+    margin-left: -25px;
+    padding: 10px 50px 10px 50px !important;
+    width: 140px;
+}
+.modal-body {
+    margin-bottom: 24px !important;
+    border-bottom: none !important;
+}
+}
+/* responsive end */
