--- a/wp-content/themes/upcreative/css/mediaqueries.css
+++ b/wp-content/themes/upcreative/css/mediaqueries.css
@@ -2,6 +2,19 @@
 Team trustylabs */
 /*-----------------<200-400>---------------------------*/
 @media screen and (max-width:320px) {
+.menu-frame {
+    clear: both ! important;
+    text-align: center ! important;
+    margin-left: 19% ! important;
+    margin-top: 10% ! important;
+	overflow:hidden;
+}
+	.logoup{
+		margin-left: 27%;
+	}
+	.socialupc{
+		margin-left: 9%;
+	}
 	.top-search-w{
 		margin-right:9px ! important;
 	}
@@ -23,11 +36,7 @@ Team trustylabs */
 .menu-bar-home {
 top: 45px !important;
 }
-.menu-list {
-        padding: 75px !important;
-    text-align: center !important;
-    margin-left: 30%;
-}
+
 .menu-list li{
     border: none;
     padding: 0;
@@ -38,6 +47,11 @@ top: 45px !important;
     text-transform: uppercase;
     letter-spacing: 1px;
 }
+}
+@media screen and (min-width:350px) and (max-width:399px){
+		.logoup{
+		margin-left: 28%;
+	}
 }
 @media screen and (min-width:370px) and (max-width:375px){
 .menu-list {
@@ -52,9 +66,7 @@ top: 45px !important;
 
 /* footer start */
 @media screen and (min-width:300px) and (max-width:600px){
-	.logoup{
-		margin-left: 190px;
-	}
+	
 
 }
 /* footer end */
@@ -372,17 +384,56 @@ font-size:50px;
 }
 
 /* footer start */
-@media screen and (min-width:600px) and (max-width:800px){
+@media screen and (min-width:600px) and (max-width:799px){
 	.logoup{
-		margin-left: 250px;
+		margin-left: 40%;
 	}
 	.socialupc img{
 	padding-top:40px;
 	width:30px;
 	display:inline;
-	margin-left:75px;
+
 
 	}
+		.socialupc {
+	margin-left:20%;
+
+	}
+
+}
+@media screen and (min-width:800px) and (max-width:899px){
+	.logoup{
+		margin-left: 43%;
+	}
+	.socialupc img{
+	padding-top:40px;
+	width:30px;
+	display:inline;
+
+
+	}
+		.socialupc {
+	margin-left:5%;
+
+	}
+
+}
+@media screen and (min-width:900px) and (max-width:999px){
+	.logoup{
+		margin-left: 43%;
+	}
+	.socialupc img{
+	padding-top:40px;
+	width:30px;
+	display:inline;
+
+
+	}
+		.socialupc {
+	margin-left:5%;
+
+	}
+
 }
 /* footer end */
 @media screen and (max-width:710px) {
@@ -538,9 +589,7 @@ font-size:50px;
 
 /* footer start */
 @media screen and (min-width:800px) and (max-width:990px){
-	.logoup{
-		margin-left: 280px;
-	}
+	
 	.socialupc img{
 	padding-top:50px;
 	width:30px;
