--- a/wp-content/themes/upcreative/css/main.css
+++ b/wp-content/themes/upcreative/css/main.css
@@ -492,7 +492,7 @@ padding-right: 40px;
 #move-left {
 left: 0;
 }
-#move-left .move-upright {
+#move-left .move-upleft {
 padding-left: 40px;
 }
 .move-horizontal {
@@ -703,15 +703,23 @@ color: #797979;
 :-ms-input-placeholder {
 color: #797979;
 }
-.swith{
-	color: white;
+.swith {
+    color: white;
     font-size: 25px;
-    margin-left: 10px;
-    margin-right: 21px;
+    margin-left: 0;
+    margin-right: 10px;
     margin-top: -5px;
+}
+.space{
+height: 270px;
 }
 
 /*---------------------------------------------------------------------- responsive start----------------------------------------------- */
+@media screen and (max-width:320px) {
+	.space{
+	    height: 140px ! important;
+	}
+}
 @media screen and (max-width:1200px) {
 .about-contact-info {
 font-size: 14px;
@@ -734,7 +742,36 @@ font-size: 14px;
 //font-size: 15px;
 }
 }
-}@media screen and (max-width:710px) {
+
+@media screen and (min-width:620px) and (max-width:645px) {
+	.space{
+		height: 85px ! important;
+	}
+}
+
+
+@media screen and (min-width:790px) and (max-width:801px) {
+	.space{
+		height: 550px ! important;
+	}
+}
+
+
+
+@media screen and (min-width:1000px) and (max-width:1030px) {
+	.space{
+		height: 585px ! important;
+	}
+}
+
+
+@media screen and (min-width:750px) and (max-width:769px) {
+	.space{
+		height: 415px ! important;
+	}
+}
+
+@media screen and (max-width:710px) {
 
 #menumask, .pop-exp-best {
 text-align: left;
@@ -804,7 +841,7 @@ margin-right: 10px;
 padding: 10px 15px;
 }
 .home-buttons {
-margin-top: 0;
+    margin-top: 14px;
 }
 }
 
@@ -830,7 +867,12 @@ font-size: 32px;
 display: none;
 }
 }
-
+@media screen and (min-width:550px) and (max-width:620px) {
+	.space{
+		height:410px ! important;
+	}
+	
+}
 @media screen and (min-width:603px) {
 ::-webkit-scrollbar {
 width: 8px;
@@ -849,4 +891,9 @@ background: #bbb;
 ::-webkit-scrollbar-thumb:window-inactive {
 background: #eee;
 }
+}
+@media screen and (min-width:960px) and (max-width:990px) {
+	.space{
+		height: 545px ! important; 
+	}
 }
