--- a/wp-content/themes/upcreative/css/main.css
+++ b/wp-content/themes/upcreative/css/main.css
@@ -100,6 +100,11 @@ html {
 .box {
     box-sizing: border-box
 }
+.qrcode{
+	width: 65px;
+margin-top: -22px;
+height: 65px;
+}
 
 .upcreative {
     position: relative;
@@ -396,8 +401,8 @@ html {
     .hero-list li {
         float: left;
         position: relative;
-        padding-right: 30px;
-        margin-right: 30px;
+      padding-right: 20px;
+margin-right: 20px;
         border-right: 1px solid #fff
     }
     .hero-list li a {
