--- a/wp-content/themes/upcreative/css/mediaqueries.css
+++ b/wp-content/themes/upcreative/css/mediaqueries.css
@@ -1,6 +1,39 @@
 /* mediaqueris css  
 Team trustylabs */
 /*-----------------<200-400>---------------------------*/
+/* text -align-xs */
+@media (max-width: 767px) { 
+.text-left-xs {text-align: left;}
+.text-center-xs {text-align: center;}
+.text-right-xs {text-align: right;}
+.text-justify-xs {text-align: justify;}
+}
+
+/* text-align-sm */
+@media (min-width: 768px) and (max-width: 991px) { 
+.text-left-sm {text-align: left;}
+.text-center-sm {text-align: center;}
+.text-right-sm {text-align: right;}
+.text-justify-sm {text-align: justify;}
+}
+
+ /* text-align-md */
+@media (min-width: 992px) and (max-width: 1199px) { 
+.text-left-md {text-align: left;}
+.text-center-md {text-align: center;}
+.text-right-md {text-align: right;}
+.text-justify-md {text-align: justify;}
+}
+
+/* text-align-lg */
+@media (min-width: 1200px) {
+.text-left-lg {text-align: left;}
+.text-center-lg {text-align: center;}
+.text-right-lg {text-align: right;}
+.text-justify-lg {text-align: justify;}
+}
+
+
 @media screen and (max-width:320px) {
 #logo-home {
 float: left;
@@ -1009,8 +1042,6 @@ padding: 65px !important;
     line-height: 1 important;
 }
 
-main.css:264
-.m
 }
 /* footer end */
 @media screen and (min-width:376px) and (max-width:399px){
